[gd_scene load_steps=12 format=2]

[ext_resource path="res://Systems/Classes/UI/_building_blocks/SaveMenu/SaveMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/Button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Systems/Classes/UI/_shared_resources/Fonts/regular_df.tres" type="DynamicFont" id=4]
[ext_resource path="res://_shared_assets/Fonts/Jost/static/Jost-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/Button/_resources/white.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=9]
size = 200
extra_spacing_bottom = -100
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 35
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 940.0
margin_bottom = 1080.0
color = Color( 0.956863, 0.823529, 0.611765, 0.631373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saves" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -630.0
margin_top = -550.0
margin_right = -30.0
margin_bottom = -10.0

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 540.0
margin_right = 320.0
margin_bottom = 890.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAbout" parent="Menu" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = -1.0
margin_right = 300.0
margin_bottom = 230.047
rect_min_size = Vector2( 300, 231.047 )
size_flags_horizontal = 5
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "About"

[node name="ButtonFullscreen" parent="Menu" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 240.0
margin_right = 300.0
margin_bottom = 302.5
rect_min_size = Vector2( 300, 62.5 )
size_flags_horizontal = 5
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "Fullscreen: ON"

[node name="ButtonSounds" parent="Menu" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 312.0
margin_right = 300.0
margin_bottom = 374.5
rect_min_size = Vector2( 300, 62.5 )
size_flags_horizontal = 5
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "Sounds: ON"

[node name="ButtonMusic" parent="Menu" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 384.0
margin_right = 300.0
margin_bottom = 446.5
rect_min_size = Vector2( 300, 62.5 )
size_flags_horizontal = 5
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "Music: ON"

[node name="ButtonQuit" parent="Menu" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 456.0
margin_right = 300.0
margin_bottom = 518.5
rect_min_size = Vector2( 300, 62.5 )
size_flags_horizontal = 5
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "Quit"

[node name="Title" type="Label" parent="."]
margin_left = 30.0
margin_top = -20.0
margin_right = 848.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EARTH'S
SECRETS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 40.0
margin_top = 420.0
margin_right = 840.0
margin_bottom = 467.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A game by Anicet Nougaret"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Credits"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1895.0
margin_bottom = 1055.0
custom_constants/separation = 40

[node name="Title" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer"]
margin_right = 1870.0
margin_bottom = 259.0

[node name="Title" type="Label" parent="Credits/MarginContainer/VBoxContainer/Title"]
margin_right = 1870.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EARTH'S SECRETS"
align = 1

[node name="Label2" type="Label" parent="Credits/MarginContainer/VBoxContainer/Title"]
margin_top = 97.0
margin_right = 1870.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A game jam game made in 1 month as part of:
- Github Game Off, November 2020  (theme constraint: \"Moonshot\") -
- Web Monetization Challenge, November 2020 (theme constraint: \"Secrets\") -"
align = 1

[node name="categs" type="HBoxContainer" parent="Credits/MarginContainer/VBoxContainer"]
margin_top = 299.0
margin_right = 1870.0
margin_bottom = 627.0

[node name="production" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs"]
margin_right = 933.0
margin_bottom = 328.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Person" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs/production"]
margin_right = 933.0
margin_bottom = 149.0

[node name="Name" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person"]
margin_right = 933.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Anicet Nougaret"
align = 1

[node name="Desc" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person"]
margin_top = 97.0
margin_right = 933.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Design, Art, Story, Code, Additional SFX"
align = 1

[node name="Person2" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs/production"]
margin_top = 179.0
margin_right = 933.0
margin_bottom = 328.0

[node name="Name" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person2"]
margin_right = 933.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Thibault Henrion"
align = 1

[node name="Desc" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person2"]
margin_top = 97.0
margin_right = 933.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Additional Design & Code"
align = 1

[node name="production2" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs"]
margin_left = 937.0
margin_right = 1870.0
margin_bottom = 328.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Label3" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production2"]
margin_right = 933.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Licensed assets:"
align = 1

[node name="ButtonHideCredits" parent="Credits" instance=ExtResource( 2 )]
margin_left = 1730.0
margin_top = 1000.0
margin_right = 1880.0
margin_bottom = 1051.0
text = "Back"
[connection signal="pressed" from="Menu/ButtonAbout" to="." method="_on_ButtonAbout_pressed"]
[connection signal="pressed" from="Menu/ButtonFullscreen" to="." method="_on_ButtonFullscreen_pressed"]
[connection signal="pressed" from="Menu/ButtonSounds" to="." method="_on_ButtonSounds_pressed"]
[connection signal="pressed" from="Menu/ButtonMusic" to="." method="_on_ButtonMusic_pressed"]
[connection signal="pressed" from="Menu/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="pressed" from="Credits/ButtonHideCredits" to="." method="_on_ButtonHideCredits_pressed"]
